tests/baselines/reference/genericTypeReferenceWithoutTypeArgument3.errors.txt
==== tests/cases/conformance/types/specifyingTypes/typeReferences/genericTypeReferenceWithoutTypeArgument3.ts (14 errors) ====
    // it is an error to use a generic type without type arguments
    // all of these are errors 
    
    declare class C<T> {
        foo: T;
    }
    
    declare var c: C;
                   ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    
    declare var a: { x: C };
                        ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    declare var b: { (x: C): C };
                         ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                             ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    declare var d: { [x: C]: C };
                      ~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
                         ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                             ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    
    declare function f(x: C): C;
                          ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
                              ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    
    declare class D extends C {}
                            ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    
    declare module M {
        export class E<T> { foo: T }
    }
    
    declare class D2 extends M.C { }
                             ~~~
!!! error TS2305: Module 'M' has no exported member 'C'.
    declare class D3<T extends M.E> { }
                               ~~~
!!! error TS2314: Generic type 'E<T>' requires 1 type argument(s).
    
    declare function h<T extends C>(x: T);
                                 ~
!!! error TS2314: Generic type 'C<T>' requires 1 type argument(s).
    declare function i<T extends M.E>(x: T);
                                 ~~~
!!! error TS2314: Generic type 'E<T>' requires 1 type argument(s).